--- a/frontend-tailwind/package.json
+++ b/frontend-tailwind/package.json
@@ -13,10 +13,10 @@
     "@polkadot/util": "^9.7.2",
     "crypto-js": "^4.1.1",
     "daisyui": "^2.15.4",
-    "next": "12.1.6",
+    "next": "^12.1.6",
     "next-auth": "^4.8.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.1",
     "react-toast-notifications": "^2.5.1",
@@ -30,5 +30,10 @@
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.3"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
